<resources>
    <string name="app_name">Fam.ly - Android Edition</string>
    <string name="logo">Logo</string>
    <string name="master_e_mail">Master E-mail</string>
    <string name="master_password">Master Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="let_s_make_one">LET\'S MAKE ONE!</string>
    <string name="first_name">First Name</string>
    <string name="profile_pin_4_digits">Profile Pin (4 Digits)</string>
    <string name="continue_text">CONTINUE</string>
    <string name="forgot_instructions">Forgot our password? No problem!\nEnter your Master E-mail and we\'ll send you a reset link.</string>
    <string name="send">SEND</string>
    <string name="family_name_last_name">Family Name (Last Name)</string>
    <string name="street_address">Street Address</string>
    <string name="postal_code">Postal Code (5 Digits)</string>
    <string name="confirm_master_password">Confirm Master Password</string>
    <string name="family_photo">Family Photo</string>
    <string name="add_family_photo">ADD FAMILY PHOTO</string>
    <string name="would_you_like_to_add_additional_family_members_you_can_always_add_more_later">Would you like to add additional family members?\nYou can always add more later.</string>
    <string name="add_parent">ADD PARENT</string>
    <string name="add_child">ADD CHILD</string>
    <string name="finish">FINISH</string>
    <string name="family_role">Family Role</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="gender">Gender</string>
    <string name="confirm_profile_pin">Confirm Profile Pin</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="create">CREATE</string>
    <string name="newsfeed">NewsFeed</string>
    <string name="permission_request">Permission Request</string>
    <string name="check_in">Check-In</string>
    <string name="profile">Profile</string>
    <string name="permission">Permission</string>
    <string name="what_s_going_on">What\'s going on?</string>
    <string name="camera_button">Camera Button</string>
    <string name="update">UPDATE</string>
    <string name="request_permission">Request Permission</string>
    <string name="request">REQUEST</string>
    <string name="what_s_happening_where_you_are">What\'s happening where you are?</string>
    <string name="map">Map</string>
    <string name="find_family_member">FIND FAMILY MEMBER</string>
    <string name="brelynn_mack">Brelynn Mack</string>
    <string name="may_14_2019_9_59_pm">May 14, 2019 @ 9:59 PM</string>
    <string name="_8741_grouse_run_lane_28314">8741 Grouse Run Lane, 28314</string>
    <string name="trash_button">Trash Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="family_button">Family Button</string>
    <string name="looking_for_someone">Looking for someone?</string>
    <string name="mack_family">Mack Family</string>
    <string name="at_least_6_characters_mix_of_letters_and_numbers">At least 6 characters, mix of letters and numbers</string>
    <string name="your_passwords_don_t_match">Your passwords don\'t match</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="signup_unsuccessful">Looks like there was a problem signing up</string>
    <string name="sending_reset_email">Sending reset link. Please check your email.</string>
    <string name="no_account">It doesn\'t look like there\'s an account associated with this email</string>
    <string name="login_unsuccessful">Couldn\'t sign you in. Please check your info and try again</string>
    <string name="save">SAVE</string>
    <string name="invalid_password">Invalid password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_master_password">Confirm New Master Password</string>
    <string name="new_master_password">New Master Password</string>
    <string name="old_master_pssword">Old Master Pssword</string>
    <string name="password_updated">Password Updated</string>
    <string name="family">Family</string>
    <string name="profile_name">Ashleigh Mack</string>
    <string name="delete_profile">Delete Profile?</string>
    <string name="confirm_delete_1">Are you sure you want to delete</string>
    <string name="confirm_delete_2">\? You won\'t be able to undo this.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account?</string>
    <string name="delete_account_confirm">Are you sure you want to delete your account? All profiles and information will be lost forever.</string>
    <string name="account_deleted">Account deleted</string>
    <string name="post_image">Post Image</string>
    <string name="post_created">Post created</string>
    <string name="time_stamp">May 17, 2019 @ 9:59 PM</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="post_deleted">Post deleted</string>
    <string name="delete_post">Delete Post?</string>
    <string name="delete_post_message">Are you sure you want to delete this post?</string>
    <string name="post_updated">Post Updated!</string>
    <string name="post_photo">Post Photo</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="request_sent">Request sent</string>
    <string name="request_error">There was a problem sending your request</string>
    <string name="permission_status_icon">Permission Status Icon</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="request_approved">Request approved</string>
    <string name="checked_in_at"> checked in at </string>
    <string name="and_says"> and says \'</string>
    <string name="location_info_for">Location information for</string>
    <string name="is_unavailable">is unavailable</string>
    <string name="unknown">Unknown Location</string>
    <string name="log_out">Log Out</string>

    <array name="family_roles">
        <item>Mother</item>
        <item>Father</item>
        <item>Grandmother</item>
        <item>Grandfather</item>
        <item>Aunt</item>
        <item>Uncle</item>
    </array>

    <array name="genders">
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>
