<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkyPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:elevation="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/display_post_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/filler_text"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/display_post_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/add_family_photo"
            android:src="@drawable/male_icon_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/display_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_stamp"
            android:textColor="@color/colorTextLight"
            app:layout_constraintStart_toEndOf="@+id/profile_photo"
            app:layout_constraintTop_toBottomOf="@+id/display_profile_name" />

        <TextView
            android:id="@+id/display_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_name"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/profile_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_delete_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/button_edit_post"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trash_icon" />

        <ImageButton
            android:id="@+id/button_edit_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edit_icon" />

        <ImageView
            android:id="@+id/display_post_image"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:visibility="gone" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>